--- a/index.html
+++ b/index.html
@@ -20,29 +20,106 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="melange" class="anchor" href="#melange" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Melange</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Internet policy mapped to Internet Protocols using blockchains </p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="brief-overview" class="anchor" href="#brief-overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief Overview</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>There exist a very unique gap in the internet current architecture of the internet, Where by the ownership of the IP address is not mapped to IP protocols. Leading to attacks like BGP Hijack and BGP takedown. Melange proposes a road map for integration of IP policy to IP protocols.</p>
+
+<h1>
+<a id="problem" class="anchor" href="#problem" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Problem</h1>
+
+<h2>
+<a id="the-bgp-hijack" class="anchor" href="#the-bgp-hijack" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The BGP Hijack</h2>
+
+<p>BGP Hijack is an attack where in Attacker can illegitmately take over group of IP addresses by corrupting the internet routing tables using misues of BGP protocol. The root cause of BGP hijack attack is due to lack of verification between IP address broadcasted by routers and actual ownership of IP addresses. A Clear gap of Internet policy and internet protocols. </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="notable-cases-of-bgp-hijack-in-history" class="anchor" href="#notable-cases-of-bgp-hijack-in-history" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Notable cases of BGP Hijack in history</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>April 1997: The "AS 7007 incident" Earliest notable example?</li>
+<li>December 24, 2004: TTNet in Turkey hijacks the Internet</li>
+<li>May 7, 2005: Google's May 2005 Outage </li>
+<li>January 22, 2006: Con-Edison hijacks big chunk of the Internet</li>
+<li>February 24, 2008: Pakistan's attempt to block YouTube access within their country takes down YouTube entirely.</li>
+<li>November 11, 2008: The Brazilian ISP CTBC - Companhia de Telecomunicações do Brasil Central leaked their internal table into the global BGP table. It lasts over  - 5 minutes. Although, it was detected by a RIPE route server and then it was not propagated, affecting practically only their own ISP customers and few others.</li>
+<li>April 8, 2010: Chinese ISP hijacks the Internet - China Telecom originated 37,000 prefixes not belonging to them in 15 minutes, causing massive outage of services globally.</li>
+<li>February, 2014: Canadian ISP used to redirect data from ISPs. - In 22 incidents between February and May a hacker redirected traffic for roughly 30 seconds each session. Bitcoin and other crypto-currency mining operations were targeted and currency was stolen.
+<a href="https://en.wikipedia.org/wiki/IP_hijacking">source</a> </li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="recent-bgp-takedown" class="anchor" href="#recent-bgp-takedown" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent BGP Takedown</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li><a href="http://www.bgpmon.net/blog/">BGPmon</a></li>
+</ul>
+
+<h1>
+<a id="solution" class="anchor" href="#solution" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Solution</h1>
+
+<h2>
+<a id="blockchains--bgp-protocol" class="anchor" href="#blockchains--bgp-protocol" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>blockchains + BGP Protocol</h2>
+
+<p>Current day blockchain like Ethereum &amp; Tendermint hold's the answer to solve the problem of BGP Hijack. Blockchains and smart contracts provides uniform trust platform accross all connected routers. Using framework of smart contracts following task can be done </p>
+
+<ul>
+<li>Auction of IP address.</li>
+<li>Registry of ownership of IP Address </li>
+<li>Registry of non owned IP address </li>
+<li>Verification of IP address upon any route connect request. </li>
+</ul>
+
+<h3>
+<a id="ideal-approach" class="anchor" href="#ideal-approach" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ideal Approach</h3>
+
+<ul>
+<li>Ethereum and Tendermint Sidechain 
+Instead of using only ethereum or only tendermint chains, The ideal case would be to use ethereum public blockchain sidechained to tendermint chain. As ethereum public chain provides an enviroment for aution of IP address and help generate a registry of alloted IP address which would reside on tendermint due to its speed. </li>
+</ul>
+
+<h3>
+<a id="changes-required" class="anchor" href="#changes-required" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Changes required</h3>
+
+<ul>
+<li>Changes in the BGP protocol design structure </li>
+<li>Changes in the Routers to acomodate blockchain (either ethereum and/or tendermint)</li>
+</ul>
+
+<h1>
+<a id="actors" class="anchor" href="#actors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Actors</h1>
+
+<ul>
+<li>IETF </li>
+<li>Internet Society </li>
+<li>IANA </li>
+<li>APNIC, ARIN, AFNIC, LACNIC.</li>
+</ul>
+
+<h1>
+<a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h1>
+
+<ul>
+<li><a href="http://www.internetsociety.org/what-we-do/internet-technology-matters/routing-security">Internet Society</a></li>
+<li><a href="https://tools.ietf.org/html/rfc7454">BGP Security RFC</a></li>
+<li><a href="https://www.ietf.org/rfc/rfc4272.txt">BGP Vulnerability analysis</a></li>
+<li><a href="https://www.ethereum.org/">Ethereum</a></li>
+<li><a href="http://tendermint.com/">Tendermint</a></li>
+</ul>
+
+<h1>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h1>
+
+<ul>
+<li>Utkarsh Verma </li>
+<li>Harsh Patel </li>
+</ul>
+
+<p>Open for contributions and debate.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Melnge/Melange.github.io">Melange.GitHub.io</a> is maintained by <a href="https://github.com/Melnge">Melnge</a>.</span>
@@ -52,6 +129,16 @@
 
     </section>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-45803199-5");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
