--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Melange.GitHub.io</h1>
-      <h2 class="project-tagline">Basic Site</h2>
+      <h1 class="project-name">Melange</h1>
+      <h2 class="project-tagline"></h2>
       <a href="https://github.com/Melnge/Melange.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/Melnge/Melange.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Melnge/Melange.github.io/tarball/master" class="btn">Download .tar.gz</a>
