--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Melange</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline"> Mixture of Internet protocols and internet policy</h2>
       <a href="https://github.com/Melnge/Melange.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/Melnge/Melange.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Melnge/Melange.github.io/tarball/master" class="btn">Download .tar.gz</a>
@@ -121,6 +121,7 @@ Instead of using only ethereum or only tendermint chains, The ideal case would b
 
 <p>Open for contributions and debate.</p>
 
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Melnge/Melange.github.io">Melange.GitHub.io</a> is maintained by <a href="https://github.com/Melnge">Melnge</a>.</span>
 
