--- a/index.html
+++ b/index.html
@@ -78,9 +78,17 @@
 <a id="ideal-approach" class="anchor" href="#ideal-approach" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ideal Approach</h3>
 
 <ul>
-<li>Ethereum and Tendermint Sidechain 
-Instead of using only ethereum or only tendermint chains, The ideal case would be to use ethereum public blockchain sidechained to tendermint chain. As ethereum public chain provides an enviroment for aution of IP address and help generate a registry of alloted IP address which would reside on tendermint due to its speed. </li>
-</ul>
+<li>Ethereum and Tendermint Sidechain </ul>
+<p>
+Instead of using only ethereum or only tendermint chains, The ideal case would be to use ethereum public blockchain sidechained to tendermint chain. The reason to do so is ethereum public chain provides an enviroment for aution of IP address and help generate a registry of alloted IP address which would reside on tendermint due to its speed and size.</li>
+</p>
+
+<h3>
+<a id="ideal-approach" class="anchor" href="#Governance and Control" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Governance and Control</h3>
+
+<ul>
+<li>Role of IANA and Regional NIC </ul>
+<p></p>
 
 <h3>
 <a id="changes-required" class="anchor" href="#changes-required" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Changes required</h3>
@@ -104,11 +112,11 @@ Instead of using only ethereum or only tendermint chains, The ideal case would b
 <a id="reference" class="anchor" href="#reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference</h1>
 
 <ul>
-<li><a href="http://www.internetsociety.org/what-we-do/internet-technology-matters/routing-security">Internet Society</a></li>
-<li><a href="https://tools.ietf.org/html/rfc7454">BGP Security RFC</a></li>
-<li><a href="https://www.ietf.org/rfc/rfc4272.txt">BGP Vulnerability analysis</a></li>
-<li><a href="https://www.ethereum.org/">Ethereum</a></li>
-<li><a href="http://tendermint.com/">Tendermint</a></li>
+<li><a href="http://www.internetsociety.org/what-we-do/internet-technology-matters/routing-security" target="_blank">Internet Society</a></li>
+<li><a href="https://tools.ietf.org/html/rfc7454" target="_blank">BGP Security RFC</a></li>
+<li><a href="https://www.ietf.org/rfc/rfc4272.txt" target="_blank">BGP Vulnerability analysis</a></li>
+<li><a href="https://www.ethereum.org/" target="_blank">Ethereum</a></li>
+<li><a href="http://tendermint.com/" target="_blank">Tendermint</a></li>
 </ul>
 
 <h1>
@@ -121,6 +129,8 @@ Instead of using only ethereum or only tendermint chains, The ideal case would b
 
 <p>Open for contributions and debate.</p>
 
+<h1>
+<a id="contributors" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h1>
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Melnge/Melange.github.io">Melange.GitHub.io</a> is maintained by <a href="https://github.com/Melnge">Melnge</a>.</span>
