--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Melange</h1>
       <h2 class="project-tagline"> Mixture of Internet protocols and internet policy</h2>
-      <a href="https://github.com/Melnge/Melange.github.io" class="btn">View on GitHub</a>
+      <a href="https://github.com/Melnge/Melange-Whitepaper" class="btn">Whitepaper</a>
       <a href="https://github.com/Melnge/Melange.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Melnge/Melange.github.io/tarball/master" class="btn">Download .tar.gz</a>
     </section>
